--- a/index.html
+++ b/index.html
@@ -71,14 +71,17 @@
           <div class="icon"><img src="https://img.icons8.com/dusk/64/26e07f/car-service.png"/></div>
           <h2>صيانة</h2>
           <p>مراقبة واصلاح اعطال في نظام السيرغاز للسيارة يمكنك طرح مشكلتك الان عبر التواصل معنا </p>
+          <a  href="maintenance.html">
           <button class="button">إقرا أكثر</button>
-
+          </a>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/dusk/64/26e07f/sell-stock.png"/></div>
           <h2>GPL بيع اجهزة</h2>
           <p> نوفر لزبائننا الكرام جميع المعدات الخاصة بنظام السيرغاز ذات جودة واسعار خيالية  </p>
+           <a href="product.html">
           <button class="button">إقرا أكثر</button>
+          </a>
         </div>
         
       </div>
