--- a/product.html
+++ b/product.html
@@ -40,7 +40,7 @@
   <section id="instal">
     <div class="container ">
       <div class="flex-content">
-      <img src="./img/insta1.jpg">
+      <img src="./img/bay.jpeg">
 
       <div class="text">
         
