--- a/instalation.html
+++ b/instalation.html
@@ -47,7 +47,7 @@
 
       <p>عملية تحويل السيارة لنظام الغاز لاقت رواجا كبيرا في الآونة الاخيرة لعدة اسباب منها اقتصادية واخرى بيئية فاسعار غاز البترول المميع اقل تكلفة بكثير من البنزين والديزل وبالتالي يوفر مصاريف معتبرة للمستعمل وايضا الدولة التي تنفق اموال طائلة في استيراد البنزين والديزل كما ان غاز البترول اقل انتاجا لثاني اكسيد الكربون الملوث للبيئة ولذلك يسمى بالوقود الاخضر. <br><br>
 
-تستغرق مدة التركيب غالبا نصف يوم وكحد اقصى يوم كما انه لايحدث تغيير ملاحظ في السيارة بعد التركيب لصغر حجم الاجهزة اما في مايخص خزان الغاز فيوجد نوعان، خزان على شكل اسطوانة واخر دائري، الخزان الاسطواني يركب في الجهة الخلفية من السيارة في صندوق الامتعة وياخذ مساحة صغيرة من   الصندوق بطول 90 سم و ارتفاع 30 سم وعرض 30سم الخزان الدائري يتم تثبيته في مكان العجلة الاحتياطية ويكون سعر الخزان الاسطواني اقل من الدائري ويلقى قبولا عند أغلبية المستعملين <br><br>
+تستغرق مدة التركيب غالبا نصف يوم وكحد اقصى يوم كما انه لايحدث تغيير ملاحظ في السيارة بعد التركيب لصغر حجم الاجهزة اما في مايخص خزان الغاز فيوجد نوعان، خزان على شكل اسطوانة واخر دائري، الخزان الاسطواني يركب في الجهة الخلفية من السيارة في صندوق الامتعة وياخذ مساحة صغيرة من   الصندوق بطول 90 سم و قطر 30 سم الخزان الدائري يتم تثبيته في مكان العجلة الاحتياطية ويكون سعر الخزان الاسطواني اقل من الدائري ويلقى قبولا عند أغلبية المستعملين <br><br>
 </p>
 <h1>:خطوات التركيب</h1><br>
 <p>
