--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="project-item">
           <div class="project-info">
             <h1>علامة عريقة</h1>
-            <h2>الشركة في صدد انتاج علامة خاصة بها مع شركة  طرطاريني الايطالية  والتي هي من اولى الشركات العالمية في هذا المجال. ستوفر الشركة خلال العامين القادمين منتوج يغطي السوق المحلية مما يقلص فاتورة الاستيراد وبذلك توفير سعر اقل للمواطن</h2>
+            <h2>الشركة في صدد انتاج علامة خاصة بها تحت اسم أونفيكو  . ستوفر الشركة خلال العامين القادمين منتوج يغطي السوق المحلية مما يقلص فاتورة الاستيراد وبذلك توفير سعر اقل للمواطن</h2>
             
           </div>
           <div class="project-img">
