--- a/product.html
+++ b/product.html
@@ -51,6 +51,8 @@
 
  <br><br>
 
+       شركة أونفيكوأطو هي شركة جزائرية دخلت مجال التصنيع لاجهزة الغاز ومن بين أهدافها تقليص الاعتمادية على الاستيراد و توفير منتوج يغطي السوق المحلية كما تهدف الى ان تصبح من  المصدرين للدول المجاورة في افاق 2024. الشركة تسعى لرفع قيمة المنتوج الجزائري لمنافسة الدول الاخرى كما ستوفر مناصب شغل للشباب الجزائري  في السنوات القليلة القادمة 
+<br><br>
 </p>
 </div>
     </div>
