--- a/maintenance.html
+++ b/maintenance.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="maintStyle.css">
     <link rel = "icon" href = "./img/eco.png"
         type = "image/x-icon"> 
-  <title>Gpl maintenance</title>
+  <title>الصيانة الدورية لنظام السيرغاز</title>
 </head>
 <body>
   <!-- Header -->
