--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="instalStyle.css">
     <link rel = "icon" href = "./img/eco.png"
         type = "image/x-icon"> 
-  <title>Instalation gaz</title>
+  <title>اجهزة السيرغاز</title>
 </head>
 <body>
   <!-- Header -->
