--- a/maintenance.html
+++ b/maintenance.html
@@ -66,7 +66,7 @@
 
 <h2>فيلتر غاز البترول   </h2><br>
 <p>
-يرتبط طول عمر الفلتر ارتباطًا وثيقًا بعدد الكيلومترات المقطوعة للسيارة حيث يوصى بتبديله كل 30 كلم ألف لضمان وصول الغاز بشكل جيد للمحرك
+يرتبط طول عمر الفلتر ارتباطًا وثيقًا بعدد الكيلومترات المقطوعة للسيارة حيث يوصى بتبديله كل 30 ألف كلم لضمان وصول الغاز بشكل جيد للمحرك
 المراقبة الدورية للسيارة
 يجب أن يتم مراقبة شاملة للسيارة مرة واحدة على الأقل في السنة. وذلك للتاكد من سلامة الاجهزة والانابيب وهذا يشمل البنزين والغاز لانه من الممكن أن تتعرض السيارة للخدوش السفلية وقد تنفصل بعض العناصر عن المثبتات فيتم اصلاحها لعدم التسبب بمشاكل للسيارة
 </p>
