--- a/maintenance.html
+++ b/maintenance.html
@@ -57,7 +57,7 @@
 </p>
 <h2>مرشح الهواء  </h2><br>
 <p>
-شراء واستبدال مرشح الهواء ليس مكلفًا ولا معقدًا ويمكن القيام به بمفردك ، بدون أدوات متخصصة أو مساعدة ميكانيكي. تؤثر حالة المرشح بشكل مباشر على استهلاك الوقود وأداء المحرك. يحد المرشح المتسخ وشديد التلوث من كمية الأكسجين المتدفقة إلى غرف الاحتراق ، مما ينتج عنه خليط وقود هواء غني جدًا ويؤدي إلى استهلاك مفرط للوقود. في النهاية ، يمكن ملاحظة عجز كبير في الطاقة  <br><br>
+شراء واستبدال مرشح الهواء ليس مكلفًا ولا معقدًا ويمكن القيام به بمفردك ، بدون أدوات متخصصة أو مساعدة ميكانيكي. تؤثر حالة المرشح بشكل مباشر على استهلاك الوقود وأداء المحرك. يحد المرشح المتسخ وشديد التلوث من كمية الأكسجين المتدفقة إلى غرف الاحتراق ، يعوض محركك ذلك عن طريق استهلاك المزيد من الوقود لإنتاج طاقة كافية لابقاء نفس السرعة التي يمكنك الوصول اليها باستخدام مرشح نظيف  <br><br>
 </p>
 <h2>شمعات الإشعال وكابلات الإشعال  </h2> <br>
 <p>
